Add if condition and test system